--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Facebook Developer Circle Hackaton July 2018",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +22,9 @@
     "nodemon": "1.17.5"
   },
   "dependencies": {
+    "@koa/cors": "2.2.1",
+    "dotenv": "6.0.0",
     "koa": "2.5.1",
-    "koa-cors": "0.0.16",
     "koa-logger": "3.2.0",
     "koa-router": "7.4.0"
   }
