--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "nodemon": "1.17.5"
   },
   "dependencies": {
+    "@koa/cors": "2.2.1",
+    "apollo-server-koa": "1.3.6",
+    "dotenv": "6.0.0",
+    "graphql": "0.13.2",
+    "graphql-tools": "3.0.5",
     "koa": "2.5.1",
-    "koa-cors": "0.0.16",
     "koa-logger": "3.2.0",
     "koa-router": "7.4.0"
   }
