--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/marcoantonioghiani01/eventing#readme",
   "devDependencies": {
     "eslint-config-airbnb-standard": "1.6.6",
-    "nodemon": "1.17.5"
+    "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "cross-fetch": "^2.2.2",
+    "dotenv": "^6.0.0",
     "koa": "2.5.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-cors": "0.0.16",
     "koa-logger": "3.2.0",
-    "koa-router": "7.4.0"
+    "koa-router": "7.4.0",
+    "request": "^2.87.0"
   }
 }
