--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "apollo-server-koa": "1.3.6",
     "dotenv": "6.0.0",
     "graphql": "0.13.2",
+    "graphql-playground-middleware-koa": "^1.6.3",
     "graphql-tools": "3.0.5",
-    "dotenv": "6.0.0",
     "koa": "2.5.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-logger": "3.2.0",
     "koa-router": "7.4.0"
   }
