--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
-    "cross-fetch": "^2.2.2",
-    "dotenv": "6.0.0",
     "@koa/cors": "2.2.1",
     "apollo-server-koa": "1.3.6",
+    "cross-fetch": "^2.2.2",
+    "dotenv": "6.0.0",
     "graphql": "0.13.2",
     "graphql-tools": "3.0.5",
     "koa": "2.5.1",
     "koa-bodyparser": "^4.2.1",
+    "koa-cookie": "^1.0.0",
     "koa-cors": "0.0.16",
     "koa-logger": "3.2.0",
     "koa-router": "7.4.0",
