--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": ["airbnb-standard"]
+  "extends": ["airbnb-standard"],
+  "rules": {
+    "strict": 0,
+    "comma-dangle": 0,
+    "consistent-return": 0,
+  }
 }
