--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "koa": "2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "3.2.0",
-    "koa-router": "7.4.0"
+    "koa-router": "7.4.0",
+    "pg": "7.4.3",
+    "sequelize": "4.38.0",
+    "sequelize-cli": "4.0.0"
   }
 }
