--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-cors": "0.0.16",
     "koa-logger": "3.2.0",
     "koa-router": "7.4.0",
+    "koa-static": "^5.0.0",
     "request": "^2.87.0"
   }
 }
