--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "refresh": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Isabella Chen - Leonardo Di Vittorio - Marlon Becker - Marco Antonio Ghiani",
