--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon index.js",
     "refresh": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Isabella Chen - Leonardo Di Vittorio - Marlon Becker - Marco Antonio Ghiani",
   "license": "MIT",
@@ -16,7 +19,9 @@
   "homepage": "https://github.com/marcoantonioghiani01/eventing#readme",
   "devDependencies": {
     "eslint-config-airbnb-standard": "1.6.6",
-    "nodemon": "^1.17.5"
+    "jest": "23.3.0",
+    "nodemon": "^1.17.5",
+    "supertest": "3.1.0"
   },
   "dependencies": {
     "@koa/cors": "2.2.1",
