--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "homepage": "https://github.com/marcoantonioghiani01/eventing#readme",
   "devDependencies": {
     "eslint-config-airbnb-standard": "1.6.6",
-    "jest": "23.3.0",
-    "nodemon": "^1.17.5",
-    "supertest": "3.1.0"
+    "nodemon": "^1.17.5"
   },
   "dependencies": {
     "@koa/cors": "2.2.1",
